
[project]
name = "eurotronic-cometblue"
version = "1.2.0b3"
description = "Allows you to access Eurotronic GmbH BLE Comet Blue Radiator Controller"
readme = "README.md"
authors = [
    {name = "Johannes Rottler", email = "johannes@rottler.me"},
    {name = "Richard Kroegel", email = "rikroe@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10, <4.0"
dependencies = [
    "bleak",
    "bleak-retry-connector",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/zero-udo/eurotronic-cometblue"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90",  # complexity
    # "D",  # docstrings
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "FLY", # flynt
    "FURB", # refurb
    "I",  # isort
    "N",  # pep8-naming
    "PGH004",  # Use specific rule codes when using noqa
    "PL",  # pylint
    "RUF",  # ruff
    "SIM",  # flake8-simplicity
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

ignore = [
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
    "D100", # Missing docstring in public module
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "PLR0913",  # Too many arguments in function definition
    "PLR2004",  # Magic value used in comparison
    "PLW1641",  # Object does not implement `__hash__` method
]

[tool.ruff.lint.mccabe]
max-complexity = 25
